Add coin to preview, show aligned point cloud

--- a/GPG-Csharp/packages.config
+++ b/GPG-Csharp/packages.config
@@ -2,4 +2,7 @@
 <packages>
   <package id="HelixToolkit" version="2.10.0" targetFramework="net461" />
   <package id="HelixToolkit.Wpf" version="2.10.0" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
