--- a/src/ogre.cfg
+++ b/src/ogre.cfg
@@ -1,4 +1,4 @@
-Render System=OpenGL Rendering Subsystem
+Render System=OpenGL 3+ Rendering Subsystem
 
 [OpenGL Rendering Subsystem]
 Colour Depth=32
@@ -8,5 +8,5 @@ Full Screen=No
 RTT Preferred Mode=FBO
 VSync=No
 VSync Interval=1
-Video Mode=640 x 480
+Video Mode=1280 x 720
 sRGB Gamma Conversion=No
