Break program into modules, fix mesh morphing

--- a/gpg_cpp.vcxproj
+++ b/gpg_cpp.vcxproj
@@ -19,10 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\FacialDetector.cpp" />
+    <ClCompile Include="src\FacialMorpher.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\OgreApp.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\FacialDetector.h" />
+    <ClInclude Include="src\FacialMorpher.h" />
     <ClInclude Include="src\helpers.h" />
     <ClInclude Include="src\OgreApp.h" />
   </ItemGroup>
