--- a/gpg_cpp.vcxproj.filters
+++ b/gpg_cpp.vcxproj.filters
@@ -8,9 +8,13 @@
   <ItemGroup>
     <ClCompile Include="src\OgreApp.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\FacialDetector.cpp" />
+    <ClCompile Include="src\FacialMorpher.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\helpers.h" />
     <ClInclude Include="src\OgreApp.h" />
+    <ClInclude Include="src\FacialDetector.h" />
+    <ClInclude Include="src\FacialMorpher.h" />
   </ItemGroup>
 </Project>
